--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
