--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://slush2023.herokuapp.com:8000",
+  "proxy": "https://slush2023.herokuapp.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
